--- a/allukas_react/index.html
+++ b/allukas_react/index.html
@@ -16,6 +16,8 @@
 
 <body>
   <div id="root"></div>
+  <div id="modal"></div>
+  <div id="overlay"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
